Add Google formatter support